# eRob_SOEM_GUI

./: CMakeLists.txt  README.md
doc/images/: README.md
include/: dc_manager.h  ethercat_manager.h  ethercat_thread.h  monitor_window.h  pdo_manager.h  sdo_manager.h
include/algorithms/: csp_motion_planning.h
include/qt_ui/: monitor_window_data.h  monitor_window_events.h  monitor_window_ui.h
include/qt_ui/components/: component_manager.h
include/qt_ui/control/: mode_manager.h  motor_controller.h
include/qt_ui/logging/: log_manager.h
include/qt_ui/network/: network_manager.h
include/qt_ui/plot/: plot_manager.h
src/: CMakeLists.txt  main.cpp
src/algorithms/: csp_motion_planning.cpp
src/ethercat/: dc_manager.cpp  ethercat_manager.cpp  ethercat_thread.cpp  pdo_manager.cpp  sdo_manager.cpp
src/qt_ui/: monitor_window.cpp  monitor_window_data.cpp  monitor_window_events.cpp  monitor_window_ui.cpp
src/qt_ui/components/: component_manager.cpp
src/qt_ui/control/: mode_manager.cpp  motor_controller.cpp
src/qt_ui/logging/: log_manager.cpp
src/qt_ui/network/: network_manager.cpp
src/qt_ui/plot/: plot_manager.cpp
